@@ -2,11 +2,11 @@
 // download ticket system
 include("include/init.php");
 
-if(!empty($_REQUEST["t"]))
+if(isset($_REQUEST["t"]))
   include("include/ticket.php");
-elseif(!empty($_REQUEST["g"]))
+elseif(isset($_REQUEST["g"]))
   include("include/grant.php");
-elseif(!empty($_REQUEST["s"]))
+elseif(isset($_REQUEST["s"]))
   include("include/status.php");
 else
   header("Location: $adminPath");
